apps/api-meta-store/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-meta-store
    require-pydtk-v4: enabled
  name: api-meta-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-meta-store
  strategy: {}
  template:
    metadata:
      labels:
        app: api-meta-store
        version: v1
        require-auth0: enabled
    spec:
      containers:
      - image: registry.gitlab.com/dataware-tools/api-meta-store:v0.4.2
        name: app
        ports:
          - containerPort: 8080
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: api-meta-store
spec:
  selector:
    app: api-meta-store
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dataware-tools-api-meta-store
spec:
  hosts:
    - "*"
  gateways:
    - dataware-tools-gateway
  http:
    - name: api-meta-store
      match:
        - uri:
            prefix: /api/latest/meta_store/
      rewrite:
        uri: /
      route:
        - destination:
            host: api-meta-store
